tweak delete.html

--- a/todos/templates/main/index.html
+++ b/todos/templates/main/index.html
@@ -24,8 +24,8 @@
                 {% endif %}
             </div>
             <div class="col-md-4">
-                <a class="btn btn-info btn-sm mx-1" href="{% url 'todos-update' todo.id %}">Edit</a>
-                <a class="btn btn-danger btn-sm mx-1" href="{% url 'todos-delete' todo.id %}">Delete</a>
+                <a class="btn btn-info btn-sm mx-1" href="{% url 'update' todo.id %}">Edit</a>
+                <a class="btn btn-danger btn-sm mx-1" href="{% url 'delete' todo.id %}">Delete</a>
             </div>
         </div>
     </div>
