--- a/todos/templates/main/delete.html
+++ b/todos/templates/main/delete.html
@@ -13,7 +13,7 @@
         <div class="alert alert-danger">
             <p>Are you sure you want to delete</p>
         </div>
-        <a class="btn btn-secondary btn-sm" href="{% url 'todos-index' %}">Cancel</a>
+        <a class="btn btn-secondary btn-sm" href="">Cancel</a>
         <input class="btn btn-danger btn-sm" type="submit" name="Confirm">
     </form>
 </div>
