--- a/todos/templates/sides/nav.html
+++ b/todos/templates/sides/nav.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-white" href="{% url 'todos-index' %}">Home <span
+                    <a class="nav-link text-white" href="{% url 'list' %}">Home <span
                             class="sr-only">(current)</span></a>
                 </li>
             </ul>
