--- a/todos/templates/sides/nav.html
+++ b/todos/templates/sides/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-info bg-info">
+<nav class="navbar navbar-expand-lg navbar-info bg-dark">
     <div class="container text-white">
         <a class="navbar-brand text-white" href="#">Todos App</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
